src/objects/Capo_Tessuto__c.object
<CustomObject>
    <fields>
        <fullName>Capo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Capo</label>
        <referenceTo>Capo__c</referenceTo>
        <relationshipName>Tessuti_Capi</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Categoria_Capo__c</fullName>
        <formula>text (Capo__r.Categoria__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Categoria Capo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Giacca__c</fullName>
        <formula>Capo__r.Codice_Giacca__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Codice Giacca</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Panciotto__c</fullName>
        <formula>Capo__r.Codice_Panciotto__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Codice Panciotto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Pantalone__c</fullName>
        <formula>Capo__r.Codice_Pantalone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Codice Pantalone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Tessuto_Capo__c</fullName>
        <formula>Tessuto__r.Codice__c 
&amp; 
CASE ( Capo__r.Record_Type_Label__c, 
&quot;Abito&quot;, Capo__r.Codice_Abito__c, 
&quot;Giacca&quot;, Capo__r.Codice_Giacca__c, 
&quot;Pantalone&quot;, Capo__r.Codice_Pantalone__c, 
&quot;Panciotto&quot;, Capo__r.Codice_Panciotto__c, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Codice Tessuto Capo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Descrizione_Modello_Giacca__c</fullName>
        <formula>text(Capo__r.Descrizione_Modello_Giacca__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Descrizione Modello Giacca</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Descrizione_Modello_Panciotto__c</fullName>
        <formula>text(Capo__r.Descrizione_Modello_Panciotto__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Descrizione Modello Panciotto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Descrizione_Modello_Pantalone__c</fullName>
        <formula>text(Capo__r.Descrizione_Modello_Pantalone__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Descrizione Modello Pantalone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posizione__c</fullName>
        <formula>Capo__r.Posizione__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Posizione</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_CAD__c</fullName>
        <label>Prezzo_CAD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_CHF__c</fullName>
        <label>Prezzo_CHF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_CNY__c</fullName>
        <label>Prezzo_CNY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_EUR__c</fullName>
        <label>Prezzo_EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_GBP__c</fullName>
        <label>Prezzo_GBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_HKD__c</fullName>
        <label>Prezzo_HKD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_ITA__c</fullName>
        <label>Prezzo_ITA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_JPY__c</fullName>
        <label>Prezzo_JPY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_MOP__c</fullName>
        <label>Prezzo_MOP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_RUB__c</fullName>
        <label>Prezzo_RUB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_USD__c</fullName>
        <label>Prezzo_USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_number__c</fullName>
        <formula>IF ( $User.Country = &quot;IT&quot;, Prezzo_ITA__c,

CASE($User.CurrencyISOcode__c, 
&quot;EUR&quot;, Prezzo_EUR__c,
&quot;USD&quot;, Prezzo_USD__c,
&quot;CHF&quot;, Prezzo_CHF__c,
&quot;CNY&quot;, Prezzo_CNY__c,
&quot;GBP&quot;, Prezzo_GBP__c,
&quot;JPY&quot;, Prezzo_JPY__c,
&quot;RUB&quot;, Prezzo_RUB__c,
&quot;CAD&quot;, Prezzo_CAD__c,
&quot;HKD&quot;, Prezzo_HKD__c,
&quot;MOP&quot;, Prezzo_MOP__c,
Prezzo_EUR__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prezzo (number)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_valuta__c</fullName>
        <formula>CASE($User.CurrencyISOcode__c, 
&quot;EUR&quot;, &quot;EUR&quot;,
&quot;USD&quot;, &quot;USD&quot;,
&quot;CHF&quot;, &quot;CHF&quot;,
&quot;CNY&quot;, &quot;CNY&quot;,
&quot;GBP&quot;, &quot;GBP&quot;,
&quot;JPY&quot;, &quot;JPY&quot;,
&quot;RUB&quot;, &quot;RUB&quot;,
&quot;CAD&quot;, &quot;CAD&quot;,
&quot;HKD&quot;, &quot;HKD&quot;,
&quot;MOP&quot;, &quot;MOP&quot;,
&quot;EUR&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prezzo (valuta)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tessuto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tessuto</label>
        <referenceTo>Tessuto__c</referenceTo>
        <relationshipName>Tessuti_Capi</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tipo_Capo__c</fullName>
        <formula>Capo__r.RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo Capo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_Giacca__c</fullName>
        <formula>text(Capo__r.Tipo_Giacca__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo Giacca</label>
        <type>Text</type>
    </fields>
    <label>Capo - Tessuto</label>
    <nameField>
        <displayFormat>CT-{0000}</displayFormat>
        <label>Capo - Tessuto Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Capi - Tessuti</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>